# AgentsMesh

./: .bazelignore  .bazelrc  .gitignore  .gitlab-ci.yml  BUILD.bazel  CHANGELOG.md  CLAUDE.md  MANIFEST  MODULE.bazel  README.md  WORKSPACE.bazel  buf.amesh.gen.yaml  buf.gen.yaml  buf.yaml  go.mod  go.sum  go.work  go.work.sum  multitool.lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agentfile/: BUILD.bazel  agentspec.go  go.mod  go.sum
agentfile/eval/: BUILD.bazel  context.go  eval_agentfile_fixture_test.go  eval_coverage_test.go  eval_decl.go  eval_envbundle_test.go  eval_full_test.go  eval_permission_mode_test.go  evaluator.go  evaluator_test.go
agentfile/extract/: BUILD.bazel  extractor.go
agentfile/lexer/: BUILD.bazel  token.go
agentfile/merge/: BUILD.bazel  merge.go  merge_comprehensive_test.go
agentfile/parser/: BUILD.bazel  ast_decl.go  parser_decl.go  parser_decl_extra.go
agentfile/resolve/: BUILD.bazel
agentfile/serialize/: BUILD.bazel  serialize.go  serialize_expr.go
backend/cmd/backfill-identifiers/: BUILD.bazel  audit.go  main.go  org_scoped.go  users.go
backend/cmd/license-gen/: BUILD.bazel  crypto.go  main.go
backend/cmd/server/: BUILD.bazel  cmd_migrate.go  connect_init.go  connect_mount.go  embedder_select.go  eventbus_autopilot.go  eventbus_loop.go  eventbus_perpetual.go  eventbus_pod.go  eventbus_relay.go  eventbus_runner.go  grpc_init.go  infra_init.go  main.go  main_startup.go  notif_dedup.go  relay_init.go  server.go  services_init.go  services_init_helpers.go  streaming_writer.go  streaming_writer_test.go
backend/internal/config/: BUILD.bazel  config.go  config_infra.go  config_oauth.go  config_payment.go  config_relay.go  config_server.go  config_url.go  env.go
backend/internal/domain/: BUILD.bazel  base.go
backend/migrations/: 000082_add_agent_type_supported_modes.up.sql  000083_add_gemini_opencode_acp_modes.down.sql  000083_add_pod_interaction_mode.down.sql  000083_add_pod_interaction_mode.up.sql  000084_add_agent_type_supported_modes.down.sql  000085_add_gemini_opencode_acp_modes.up.sql  000086_add_codex_acp_mode.down.sql  000086_add_codex_acp_mode.up.sql  000087_add_podfile_source.down.sql  000087_add_podfile_source.up.sql  000088_add_custom_agent_podfile.down.sql  000088_add_custom_agent_podfile.up.sql  000089_agent_slug_as_primary_key.down.sql  000089_agent_slug_as_primary_key.up.sql  000090_rename_agent_types_tables.down.sql  000090_rename_agent_types_tables.up.sql  000091_rename_agent_type_columns.down.sql  000091_rename_agent_type_columns.up.sql  000092_agents_slug_as_primary_key.down.sql  000092_agents_slug_as_primary_key.up.sql  000093_agents_slug_as_primary_key.up.sql  000093_drop_legacy_config_columns.down.sql  000093_drop_legacy_config_columns.up.sql  000095_add_mode_pty_to_builtin_podfiles.down.sql  000095_add_mode_pty_to_builtin_podfiles.up.sql  000100_claude_acp_add_verbose_flag.down.sql  000100_claude_acp_add_verbose_flag.up.sql  000103_fix_permission_mode.down.sql  000103_fix_permission_mode.up.sql  000105_drop_tickets_repository_number_unique.down.sql  000105_drop_tickets_repository_number_unique.up.sql  000106_fix_autopilot_prompt_column.down.sql  000106_fix_autopilot_prompt_column.up.sql  000107_add_pod_perpetual.down.sql  000107_add_pod_perpetual.up.sql  000108_channel_visibility_and_member_role.down.sql  000108_channel_visibility_and_member_role.up.sql  000109_resource_grants.down.sql  000109_resource_grants.up.sql  000109_structured_channel_messages.down.sql  (+92 more)
build_defs/: BUILD.bazel  workspace_status.sh
build_defs/docker/: BUILD.bazel  go_oci_image.bzl  oci_push.bzl
build_defs/go/: BUILD.bazel  golangci_lint.bzl  golangci_lint_runner.sh
build_defs/ios/: BUILD.bazel  ios_product.bzl  rust_xcframework.bzl  rust_xcframework_actions.bzl  sim_runner.sh  swift_clang_module.bzl  xcframework_assemble.bzl
build_defs/protoconv/: BUILD.bazel  defs.bzl
build_defs/release/: BUILD.bazel  checksums.bzl  cross_binary.bzl  release_archive.bzl  release_bundle.bzl
build_defs/rust/: BUILD.bazel  napi.bzl  wasm.bzl
build_defs/web/: BUILD.bazel  electron.bzl  eslint.bzl  image_size_gate.sh  internal_package.bzl  next.bzl  next_bazel_wrapper.mjs  next_oci.bzl  playwright.bzl  test.bzl  ts.bzl  vitest.bzl  vitest_shim.cjs
clients/core/: Cargo.toml  WASM_INTEGRATION.md
clients/core/.cargo/: config.toml
clients/core/pkg/: .gitignore  BUILD.bazel  agentsmesh_wasm.d.ts  agentsmesh_wasm.js  agentsmesh_wasm_bg.wasm.d.ts  package.json
clients/core/scripts/: BUILD.bazel  build-ios-xcframework.sh  check-dto-drift.sh
clients/desktop/: BUILD.bazel  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package.json  playwright.config.ts  tsconfig.json
clients/desktop/e2e/: .gitignore  global.setup.ts  tsconfig.json
clients/desktop/playwright-report/: index.html
clients/desktop/scripts/: ensure-writable-unpacked.cjs  ensure-writable-unpacked.test.ts  gen-ipc-tests.ts
clients/ios/: BUILD.bazel  Makefile  README.md  project.yml
clients/ios/App/: AgentsMeshApp.swift  BUILD.bazel  Info.plist
clients/web/: .dockerignore  .gitignore  .npmrc  BUILD.bazel  docker-entrypoint.sh  entrypoint.mjs  eslint.config.mjs  healthcheck.mjs  next.config.bazel.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
clients/web-admin/: .env.example  .gitignore  BUILD.bazel  docker-entrypoint.sh  entrypoint.mjs  healthcheck.mjs  next.config.bazel.mjs  next.config.ts  package.json  tsconfig.json  vitest.config.ts
clients/web/e2e/: block-crud.spec.ts  fixtures.ts  (+7 more)
clients/web/e2e-playwright/: BUILD.bazel  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
deploy/dev/: BUILD.bazel  README.md  backend.Dockerfile  dev.sh  dev_runner.sh  docker-compose.yml  generate-dev-certs.sh  runner-entrypoint.sh  runner.Dockerfile
proto/: .gitignore  BUILD.bazel  go.mod  go.sum
tools/protoc-gen-amesh-convert/: BUILD.bazel  annotation.go  main.go
tools/rust_prost_toolchain/: BUILD.bazel
tools/validate_prost_tags/: BUILD.bazel  rule.bzl  validate_prost_tags.py
(+5607 files in other folders)
