###############################################################################
# AgentsMesh — root BUILD file.
#
# Exports top-level config files so they can be referenced from nested
# BUILD files (e.g. `//:go.work`, `//:pnpm-lock.yaml`). Adds workspace-level
# targets: `buildifier` (formatter), `gazelle` (Go BUILD gen, Phase 1+).
###############################################################################

load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")

# gazelle:prefix github.com/anthropics/agentsmesh
# gazelle:proto disable_global
# gazelle:go_naming_convention import_alias

# Workspace-root node_modules link. aspect_rules_js requires this in
# the root BUILD so that sub-package references like
# `//clients/web:node_modules/react` resolve back to the shared
# `.aspect_rules_js/node_modules/react@X.Y.Z` store. Without a root
# package.json + this target, every workspace TS BUILD fails analysis.
npm_link_all_packages(name = "node_modules")

# Copy root package.json into bazel-out so sub-packages (clients/web,
# clients/web-admin) can reference it from their data deps. aspect_rules_js
# / next_app expect data files to live within the caller's package or
# come from a `copy_to_bin` wrapper; a bare `//:package.json` label in a
# nested BUILD triggers the "move copy_to_bin target to //" error.
copy_to_bin(
    name = "package_json_bin",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
)

exports_files(
    [
        ".bazelrc",
        ".bazelignore",
        "go.work",
        "package.json",
    ],
    visibility = ["//visibility:public"],
)

# `bazel run //:gazelle` regenerates BUILD.bazel files for every Go package
# under backend/, runner/, relay/, agentfile/, proto/.
gazelle(name = "gazelle")

# rust-project.json is generated via `bazel run
# @rules_rust//tools/rust_analyzer:gen_rust_project`. The legacy
# `rust_analyzer_dependencies()` call was removed because it uses
# `http_archive` (WORKSPACE-only) and fails under bzlmod.

# Runs buildifier on every BUILD/MODULE/.bzl file. CI enforces this via
# `bazel run //:buildifier_check`.
buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./.git/*",
        "./.claude/*",
        "./node_modules/*",
        "./clients/**/node_modules/*",
        "./**/target/*",
    ],
    lint_mode = "fix",
    mode = "fix",
)

buildifier(
    name = "buildifier_check",
    exclude_patterns = [
        "./.git/*",
        "./.claude/*",
        "./node_modules/*",
        "./clients/**/node_modules/*",
        "./**/target/*",
    ],
    lint_mode = "warn",
    mode = "check",
)
