# gazelle-managed root of the `proto` Go module.

load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@bazel_skylib//rules:write_file.bzl", "write_file")

# Generated TS proto message classes (committed mirror under `gen/ts/`).
# vitest / next consume via the `@proto/*` path alias resolved to
# `<root>/proto/gen/ts/*` (clients/web/vitest.config.ts). copy_to_bin
# stages the .ts files so they appear in test runfiles at the expected
# relative path; aspect_rules_js's `js_test` rejects raw source-tree
# inputs (each input must be in bazel-out).
#
# `proto/gen/go/` stays excluded — it's a lint-time mirror written by
# golangci_lint_runner.sh; Bazel never reads it directly.
copy_to_bin(
    name = "proto_gen_ts_files",
    srcs = glob(["gen/ts/**/*.ts"]),
    visibility = ["//visibility:public"],
)

# js_library wrapper — surfaces `JsInfo.sources` for downstream
# bundlers (vite / next webpack). Note: ts_project's tsc action only
# picks up `transitive_types` from JsInfo (i.e. .d.ts files), so this
# target alone is NOT sufficient for tsc typecheck — see the npm
# package target below for the workspace-resolvable mount that
# satisfies tsc's rootDir constraint.
js_library(
    name = "proto_gen_ts",
    srcs = [":proto_gen_ts_files"],
    visibility = ["//visibility:public"],
)

# `@agentsmesh/proto` internal npm package — surfaces the generated
# TS proto modules under a workspace-mounted node_modules path so the
# web/ts code can resolve them through tsc's normal node module walk
# instead of a tsconfig path alias to `../../proto/gen/ts`. The path
# alias keeps the files _outside_ tsc's rootDir, which trips TS6059
# the moment any file under :src imports them.
#
# `gen/ts/<domain>/v1/<name>_pb.ts` becomes
# `node_modules/@agentsmesh/proto/<domain>/v1/<name>_pb.ts` after
# `npm_link_package` mounts the result at the workspace root.
write_file(
    name = "proto_pkg_json",
    out = "package.json",
    content = ['{"name": "@agentsmesh/proto", "version": "0.1.0", "type": "module"}'],
)

npm_package(
    name = "pkg",
    srcs = [
        ":proto_pkg_json",
    ] + glob(["gen/ts/**/*.ts"]),
    package = "@agentsmesh/proto",
    # Strip the `gen/ts/` prefix so consumers see the package as
    # `<domain>/v1/<name>_pb.ts` (i.e. import path
    # `@agentsmesh/proto/agent/v1/agent_pb`).
    replace_prefixes = {"gen/ts/": ""},
    version = "0.1.0",
    visibility = ["//visibility:public"],
)
