# Placeholder — Web/TS macros land here in Phase 4.
#   next.bzl      → next_app      (Next.js build/dev/start, ported from AIO)
#   next_oci.bzl  → next_oci      (Next.js → OCI image)
#   electron.bzl  → electron_app  (Electron Forge → .app bundle, new)
#   test.bzl      → vitest_test / playwright_test (Phase 4 test wrapper)

load("@aspect_rules_js//js:defs.bzl", "js_library")

# Shim sources re-exported for js_test entry points.
exports_files(
    ["vitest_shim.cjs"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "vitest_shim",
    srcs = ["vitest_shim.cjs"],
    visibility = ["//visibility:public"],
)
