# Web/TS macros. Loaded by clients/web, clients/web-admin, clients/desktop.
#   next.bzl              → next_app          (Next.js build/dev/start)
#   next_oci.bzl          → next_oci_image    (Next.js → OCI image)
#   electron.bzl          → electron_vite_build, electron_builder_app
#   eslint.bzl            → eslint_test
#   vitest.bzl            → vitest_test       (uses vitest_shim.cjs below)
#   playwright.bzl        → playwright_test
#   ts.bzl                → ts_project
#   internal_package.bzl  → internal_npm_package, generated_package_json
#                           (Bazel-native @agentsmesh/* package layout)

load("@aspect_rules_js//js:defs.bzl", "js_library")

# Shim sources re-exported for js_test entry points.
exports_files(
    ["vitest_shim.cjs"],
    visibility = ["//visibility:public"],
)

# Image-size regression gate. clients/{web,web-admin}:image_size_gate
# `sh_test`s it against their `:image_tarball` outputs.
exports_files(
    ["image_size_gate.sh"],
    visibility = ["//visibility:public"],
)

# Vendored from aspect_rules_js v2.9.2 contrib/nextjs/next.bazel.mjs —
# our `next_standalone_app` macro forks the upstream rule to pass
# `--webpack` (Next 16 Turbopack crashes inside the Bazel sandbox).
exports_files(
    ["next_bazel_wrapper.mjs"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "vitest_shim",
    srcs = ["vitest_shim.cjs"],
    visibility = ["//visibility:public"],
)
