[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/api-client",
    "crates/auth",
    "crates/relay",
    "crates/events",
    "crates/types",
    "crates/state",
    "crates/persistence",
    "crates/services",
    "crates/ffi",
    "crates/wasm",
    "crates/transport",
    "crates/node-bridge",
    "crates/uniffi-bindgen",
    "crates/local-runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anthropics/agentsmesh"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime — iOS-compatible subset of `full`.
# Dropped: process/signal/io-std (not supported on iOS sandbox).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs", "parking_lot"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
futures-channel = "0.3"

# Error handling
thiserror = "2"

# Binary
bytes = "1"

# FFI
uniffi = "0.29"

# Logging
tracing = "0.1"

# Testing
tokio-test = "0.4"
wiremock = "0.6"

# Random
rand = "0.9"

# URL encoding
urlencoding = "2"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

# Internal crates
agentsmesh-protocol = { path = "crates/protocol" }
agentsmesh-types = { path = "crates/types" }
agentsmesh-api-client = { path = "crates/api-client" }
agentsmesh-auth = { path = "crates/auth" }
agentsmesh-relay = { path = "crates/relay" }
agentsmesh-events = { path = "crates/events" }
agentsmesh-state = { path = "crates/state" }
agentsmesh-persistence = { path = "crates/persistence" }
agentsmesh-services = { path = "crates/services" }
agentsmesh-transport = { path = "crates/transport" }
agentsmesh-local-runner = { path = "crates/local-runner" }
