load("//build_defs/web:electron.bzl", "electron_builder_app", "electron_vite_build")
load("//build_defs/web:playwright.bzl", "playwright_test")
load("//build_defs/web:ts.bzl", "ts_project")

# `bazel build //clients/desktop:out` — Bazel-native electron-vite
# build. Produces `out/main/index.js`, `out/preload/index.js`,
# `out/renderer/...` as a tree artifact. Consumed by electron-builder
# downstream (still shell-invoked; rules_electron full-Bazel
# packaging is a Phase B follow-up).
#
# Tagged `manual` because the renderer cross-imports clients/web/src
# via electron-vite aliases — the build needs both desktop/src AND
# clients/web/src in its sandbox. We wire that closure below.
electron_vite_build(
    name = "out",
    srcs = glob(
        [
            "src/**/*",
            "shims/**/*",
        ],
        allow_empty = True,
        exclude = ["electron.vite.config.ts"],
    ) + [
        "electron.vite.config.ts",
        "tsconfig.json",
        # Renderer cross-imports `clients/web/src/...` via electron-vite
        # path aliases — the sandbox needs the whole web src tree.
        "//clients/web:src",
        # Workspace packages whose raw .ts is consumed via `workspace:*`
        # protocol; vite needs the npm_package form (pkg) so the
        # `node_modules/@agentsmesh/<name>/src/index.ts` symlink in
        # the sandbox resolves correctly.
        "//packages/electron-adapter:pkg",
        "//packages/service-interface:pkg",
        "//packages/service-runtime:pkg",
    ],
    tags = ["manual"],
)

# `bazel build //clients/desktop:dist` — produces a tree artifact
# containing platform installers (.dmg / .exe / .AppImage) under
# `bazel-bin/clients/desktop/dist/`. Drives `electron-builder` over
# the `:out` tree from a Bazel sandbox.
#
# `tags = ["manual", "electron_builder"]` (set by the macro) keeps
# this target out of `bazel build //...` because cross-platform
# packaging requires the matching host (macOS for `.dmg`, Windows
# for `.exe`, etc.) and pulls in heavy native deps. CI matrix opts
# in via `--build_tag_filters=electron_builder` per OS runner.
electron_builder_app(
    name = "dist",
    out = ":out",
    config = "electron-builder.yml",
    package_json = "package.json",
)

# Main-process TS (lives in `src/main/`). Produces a Node-loadable
# bundle; electron-vite handles any esbuild tweaks we need.
#
# Tagged `manual` because the desktop renderer aliases `@/stores`,
# `@/lib`, etc. to clients/web/src via electron.vite.config.ts —
# tsc by itself can't resolve those without complex path
# replication. The canonical type-check pipeline runs inside
# `electron-vite build` (Phase B). These targets stay for ad-hoc
# `bazel build //clients/desktop:main` invocations.
ts_project(
    name = "main",
    srcs = glob([
        "src/main/**/*.ts",
        "src/preload/**/*.ts",
    ]),
    declaration = True,
    tags = ["manual"],
    tsconfig = "tsconfig.json",
    deps = ["//:node_modules"],
)

ts_project(
    name = "renderer",
    srcs = glob([
        "src/renderer/**/*.ts",
        "src/renderer/**/*.tsx",
    ]),
    declaration = True,
    tags = ["manual"],
    tsconfig = "tsconfig.json",
    deps = ["//:node_modules"],
)

# Desktop Playwright e2e suite (Electron-hosted). Tagged `manual + e2e`
# so `bazel test //...` skips it; run via:
#   pnpm -C clients/desktop build          # build out/ first (electron-vite)
#   pnpm exec playwright install chromium-headless-shell
#   bazel test //clients/desktop:e2e --test_tag_filters=e2e
#
# Unlike Web, this target can't rebuild the Electron app itself — the
# `electron-vite build` pipeline (napi addon + main/preload/renderer
# bundles) happens outside Bazel. We ship the pre-built `out/` dir as
# runfiles so Playwright's `_electron.launch()` can reach it.
#
# Note: we DO NOT depend on `:node_modules/@agentsmesh/node-bridge` —
# that label pulls in the Rust napi target whose cdylib compile needs
# Node headers the sandbox doesn't provide. Instead the pre-built
# `.node` binary is packaged via the wildcard glob below, same as the
# rest of the Electron runtime.
playwright_test(
    name = "e2e",
    srcs = glob(
        [
            "e2e/**/*.spec.ts",
            "e2e/**/*.ts",
        ],
        allow_empty = True,
        exclude = ["e2e/node_modules/**"],
    ),
    config = "playwright.config.ts",
    data = [
        "package.json",
        # Root-linked @playwright/test (single version across the repo
        # via pnpm overrides — see build_defs/web/playwright.bzl).
        "//:node_modules/@playwright/test",
        # Electron binary lives in root node_modules (Phase C hoist).
        # `_electron.launch()` walks up from CWD to find it.
        "//:node_modules/electron",
        # Workspace link to the napi addon.
        "//:node_modules/@agentsmesh/node-bridge",
        # Shared helpers/fixtures from web/e2e-playwright.
        "//clients/web/e2e-playwright:shared_fixtures",
    ] + glob(
        [
            # Pre-built Electron app (produced by electron-vite build).
            "out/**",
            ".env*",
        ],
        allow_empty = True,
    ),
)
